--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="script" href="script.js"/>
 </head>
 <body>
-    
+    <h1>Rock, Paper, Scissors</h1>
+    <p>Open your DevTools to see the output as you play the game</p>
+    <script src="script.js">
+    </script>
 </body>
 </html>
